--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mathapp",
   "version": "0.1.0",
-  "homepage": "https://teletubigamin.github.io/mathapp/",
+  "homepage": "https://teletubigamin.github.io/mathapp",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-onclickoutside": "^6.12.2",
     "react-scripts": "5.0.1",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
