--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mathapp",
   "version": "0.1.0",
-  "homepage": "https://teletubigamin.github.io/mathapp",
+  "homepage": "https://teletubigamin.github.io/mathapp/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
